$Id$

2003-10-17 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/mixer.c, src/mixer.h, src/eplayer.c, src/callbacks.c,
          interface.c:
          Rewrote mixer code, the mixer is periodically read now to
          reflect changes made by other applications
        * src/eplayer.c: Added _playback_start(), _playback_stop()
        * src/vorbis.c: The "time" part is updated in a sane
          period now
        * src/vorbis.c, src/eplayer.c: Tidied up libao calls
        * data/eplayer.edc: buttons emit their signals on mouse_up now

2003-10-16 Tilman Sauerbeck <tilman@code-monkey.de>
        * configure.ac: Added endianess-check, added --enable-debug
          switch
        * src/eplayer.c, src/playlist.c: added playlist_load_any(),
          eplayer will now load files and directories as well
        * code cleanup
        * configure.ac, Makefile.am etc: implemented install and
          dist targets
        * src/playlist.c: Fixed a potential segfault
        * src/vorbis.c: Fixed a segfault that occurred when
          play_loop() called open_track() with player->cur_item
          being NULL

2003-10-15 Tilman Sauerbeck <tilman@code-monkey.de>
        * data/eplayer.edc: Added basic playlist support,
          time_text shows elapsed time or time left
        * src/Makefile.am: Now linking to libesmart, included playlist.c
          and playlist.h
        * src/playlist.c,h: Added playlist object
        * src/eplayer.c, interface.c: Added basic playlist support
        * autogen.sh, configure.ac, src/Makefile.am:
          Updated build system