@@ -1,5 +1,6 @@
 #include <config.h>
 #include <Edje.h>
+#include <Esmart/container.h>
 #include "eplayer.h"
 #include "mixer.h"
 #include "vorbis.h"
@@ -110,3 +111,28 @@ void cb_time_display_toggle(ePlayer *player, Evas_Object *obj,
 	update_time(player);
 }
 
+/**
+ * Scrolls the playlist containers.
+ *
+ * @param player
+ * @param direction 1 (up) or -1 (down).
+ */
+static void playlist_scroll(ePlayer *player, int direction) {
+	int i, val;
+
+	for (i = 0; i < 2; i++) {
+		/* it's * 3 because we're scrolling 3 elements at once */
+		val = player->gui.playlist_font_size[i] * 3 * direction;
+		e_container_scroll(player->gui.playlist_col[i], val);
+	}
+}
+
+void cb_playlist_scroll_up(void *udata, Evas_Object *obj,
+                           const char *emission, const char *src) {
+	playlist_scroll(udata, 1);	
+}
+
+void cb_playlist_scroll_down(void *udata, Evas_Object *obj,
+                             const char *emission, const char *src) {
+	playlist_scroll(udata, -1);
+}
