@@ -21,5 +21,10 @@ void cb_volume_raise(void *udata, Evas_Object *obj,
 void cb_volume_lower(void *udata, Evas_Object *obj,
                      const char *emission, const char *src);
 
+void cb_playlist_scroll_up(void *udata, Evas_Object *obj,
+                           const char *emission, const char *src);
+void cb_playlist_scroll_down(void *udata, Evas_Object *obj,
+                             const char *emission, const char *src);
+
 #endif
 
